# some-useful-stuff

./: .gitignore  Changelog.md  LICENSE.md  README.md  TableOfContent.md  Todo.md
Algorithm/: Li.md  Readme.md  Readme.md.md
DataStructs/: Readme.md
Factorio/: AllTemplatesAsOneBook.md  BinaryElements.md  ElectoBook.md  Fortification.md  Readme.md  SingleTemplates.md  SurfacesBook.md
Git/: Branches.md  Commits.md  Files.md  Git commands.md  LocalRepo.md  Log.md  Readme.md  RemoteRepo.md
Git/Hooks/: Readme.md
Git/Hooks/Pre-recieve/: pre-receive
Git/Hooks/Pre-recieve/scripts/: pre-receive.py
Git/Hooks/Pre-recieve/scripts/base/: BranchRules.py  Commit.py
Git/Hooks/Pre-recieve/security/AllowedUsers/: master
Git/Hooks/Pre-recieve/security/CommitStyles/: default.style  master
Languages/: CMake.md  Doxygen.md  Json.md  Markdown.md  Readme.md  Regex.md
Languages/Cmake/: AdditionalCommands.md  CmakeQt.md  ConsoleWorkflow.md  Functions.md  Intro.md  Modules.md  Readme.md  Variables.md
Languages/Cmake/Functions/: Additional.md  Base.md  ExternalFunctions.md
Languages/Cmake/QtWithCmake/: CmakeQt.md  CompileQt.md
Languages/Cmake/Todo/: Files.md  Intro.md
Licenses/: Beerware.md  MIT.md  Readme.md  Unlicensed.md  WTFPL.md
ProjectOrganisation/: Physical Project Organisation.md  ProjectsWorkflow.md  Readme.md  Versions.md
ProjectOrganisation/PhysProjOrg/: CMake.md  MSVS.md  Qt.md  Readme.md  SomeProjFiles.md
Uncategorized/: Readme.md
_resources/files/cmake/MultiModules/: CMakeLists.txt
_resources/files/cmake/SingleModule/: CMakeLists.txt
_resources/files/projectsDocs/: Contributing.md
_resources/templates/: BackFromTheme.md  Readme.md  SomeTheme.md
_resources/templates/Themes/: BackFromTheme.md  LicenseTemplate.md
_resources/templates/Themes/Factorio/: FactorioBook.md  FactorioTemplateInfo.md
